src/App.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");

* {
	font-family: "Inter", sans-serif;
}

.flex {
	display: flex;
	align-items: center;
	margin: 10px;
}

.flex.column {
	flex-direction: column;
	align-items: flex-start;
	gap: 10px;
}

button {
	font-size: 16px;
	font-weight: 500;
	padding: 15px;
	border: none;
	color: #333333;
	transition: 0.1s all ease-in-out;
}

button:hover {
	transition: 0.1s all ease-in-out;
}

span {
	transition: 0.1s all ease-in-out;
}

.inc-btn {
	width: 60px;
	height: 60px;
	font-size: 36px;
	line-height: 0;
	border-radius: 50%;
	position: relative;
}

.inc-btn > span {
	padding: 0;
	font-weight: 500;
	font-size: 36px;
	color: #333333;
	position: relative;
}

.plus {
	top: -3px;
}

.minus {
	top: -1px;
}

.inc-btn:hover {
	background-color: #b9d7d9;
}

.inc-btn:hover > span {
	color: #fff;
}

.count {
	color: #333333;
	font-size: 24px;
	font-weight: 700;
	width: 50px;
	text-align: center;
	padding: 20px;
}

.remove-all:hover {
	background-color: #9e0c39;
	color: #fff;
}

.info {
	position: absolute;
	height: auto;
	width: 300px;
	padding-right: 80px;
	background-color: rgba(240, 240, 240, 0.7);
	font-size: 15px;
	top: calc(100vh - 310px);
	left: 10px;
}

.info .close {
	position: absolute;
	background-color: transparent;
	width: 50px;
	height: 50px;
	line-height: 0;
	top: 10px;
	right: 10px;
	font-size: 30px;
}

.info .close:hover {
	background-color: #9e0c39;
	color: #fff;
}

.info .close span {
	position: relative;
	left: -2px;
}

.info ul li {
	margin-bottom: 10px;
}

